Resolve merge conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,32 @@
-# Node modules (if you use Node.js or any build tools)
-node_modules/
+# 🎮 BattleBlox
 
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*BattleBlox* is a fun, browser-based game where players can battle, build, and customize their avatars! Choose your character, explore the world, and compete for glory.
 
-# OS files
-.DS_Store
-Thumbs.db
+## 🌟 Features
 
-# Build output folders (if you have any build process)
-dist/
-build/
+- 🧍 Avatar selection (with accessories like hats and glasses!)
+- 🕹 Fun, interactive gameplay
+- 🎵 Background music & sound effects
+- 🏆 Leaderboard and multiplayer support (coming soon!)
+- 💾 "My Games" dashboard to track progress
 
-# Environment files (if you have any secrets/config)
-.env
-.env.local
-.env.*.local
+## 🚀 How to Play
 
-# IDE/editor files
-.vscode/
-.idea/
-*.suo
-.ntvs
-*.njsproj
-*.sln
+1. Open the game in your browser.
+2. Choose your avatar and customize it.
+3. Jump into battle and try to win!
+4. Visit the profile page to view your stats.
 
-# Misc
-*.swp
+## 🛠 Technologies Used
+
+- HTML5, CSS3, JavaScript
+- Optional: Tailwind, React (if you used them)
+- Hosted on GitHub Pages
+
+## 📦 Run Locally
+
+You can download or clone the project and open index.html in your browser.
+
+```bash
+git clone https://github.com/yourusername/battleblox.git
+cd battleblox
